# sekimore-gw

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  README.md  agent-setup.sh  coverage.json  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml  lint.yml  test.yml
config/: config.sample.yml  config.yml  ulogd.conf
config/squid/: squid.conf.template
src/: __init__.py  config.py  constants.py  dns_server.py  firewall.py  firewall_monitor.py  ip_manager.py  logger.py  main.py  orchestrator.py  proxy_manager.py  proxy_monitor.py
src/web_ui/: __init__.py  app.py
src/web_ui/templates/: dashboard.html
tests/: __init__.py  conftest.py  docker-compose.test.yml
tests/e2e/: __init__.py  test_dns_server_e2e.py
tests/functional/: __init__.py  test_dns_query_flow.py  test_end_to_end.py  test_firewall_rules_flow.py  test_web_ui_api_flow.py
tests/integration/: __init__.py  test_agent_setup_integration.py  test_orchestrator_integration.py  test_websocket_integration.py
tests/unit/: __init__.py  test_config.py  test_dns_server.py  test_firewall.py  test_firewall_monitor.py  test_ip_manager.py  test_logger.py  test_main.py  test_orchestrator.py  test_proxy_manager.py  test_proxy_monitor.py  test_web_ui.py
